working on front-end

--- a/StudySync/templates/navbar.html
+++ b/StudySync/templates/navbar.html
@@ -1,3 +1,6 @@
+{% load static%}
+
+<img src="{% static 'images/logo.svg' %}" alt="">
 <a href="{% url 'projects'%}">Homepage</a>
 <hr>
 <a href="{% url 'create-project' %}"><b>Add a Project</b></a>
