--- a/StudySync/templates/main.html
+++ b/StudySync/templates/main.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
     <title>{% block title %}Document{% endblock title %}</title>
 </head>
 <body>
@@ -11,7 +13,6 @@
     <div id="content">
         {% block content %}{% endblock content %}
     </div>
-    <hr>
     <footer>This footer is from main.html</footer>
 </body>
 </html>
