Added image field

--- a/StudySync/projects/templates/projects/project.html
+++ b/StudySync/projects/templates/projects/project.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<img src="{{projectObj.featured_image.url}}">
 <p><b><i>This is from project.html</i></b></p>
 <p>ID is {{projectObj.id}}</p>
 <p>Title is {{projectObj.title}}</p>
