--- a/StudySync/projects/templates/projects/project_form.html
+++ b/StudySync/projects/templates/projects/project_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Project Form</h1>
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form}}
     <input type="submit">
